very basic routing working

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cashless",
+  "name": "react-redux-webpack",
   "version": "1.0.0",
-  "description": "Cashless Tips",
+  "description": "React Redux Webpack",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
@@ -9,23 +9,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/itsmoops/cashless.git"
+    "url": "git+https://github.com/itsmoops/react-redux-webpack.git"
   },
   "keywords": [
-    "cashless",
-    "tips"
+    "react",
+    "redux",
+    "webpack",
+    "boilerplate"
   ],
   "author": "Eric Moore",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/itsmoops/cashless/issues"
+    "url": "https://github.com/itsmoops/react-redux-webpack/issues"
   },
-  "homepage": "https://github.com/itsmoops/cashless#readme",
+  "homepage": "https://github.com/itsmoops/react-redux-webpack#readme",
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
     "image-webpack-loader": "^3.3.1",
