--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "https://github.com/itsmoops/react-redux-webpack/issues"
   },
   "homepage": "https://github.com/itsmoops/react-redux-webpack#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -42,6 +42,7 @@
     "redux-saga": "^0.15.3",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3",
+    "style-loader": "^0.18.1",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
