--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
