--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
     "image-webpack-loader": "^3.3.1",
+    "isomorphic-fetch": "^2.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "react": "^15.5.4",
