got some working redux with thunks

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
+    "firebase": "^4.1.0",
     "image-webpack-loader": "^3.3.1",
     "isomorphic-fetch": "^2.2.1",
     "less": "^2.7.2",
@@ -42,7 +43,6 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-saga": "^0.15.3",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3",
