--- a/package.json
+++ b/package.json
@@ -24,12 +24,6 @@
   },
   "homepage": "https://github.com/itsmoops/react-redux-webpack#readme",
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
     "firebase": "^4.1.0",
@@ -45,12 +39,19 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3",
-    "style-loader": "^0.18.1",
-    "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5"
+    "style-loader": "^0.18.1"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "extract-text-webpack-plugin": "^2.1.0",
-    "redux-immutable-state-invariant": "^2.0.0"
+    "redux-immutable-state-invariant": "^2.0.0",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   }
 }
