--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,30 @@
 {
-    "extends": "airbnb",
-    "plugins": [
-        "react"
-    ],
-    "env": {
-        "browser": true,
-        "node": true,
-        "es6": true,
-        "mocha": true
-    },
-    "rules": {
-        "semi": ["error", "never"],
-        "quotes": ["error", "single"],
-        "indent": ["error", 4],
-        "comma-dangle": ["error", "never"],
-        "object-curly-spacing": ["error", "always"],
-        "react/react-in-jsx-scope": 0,
-        "jsx-a11y/href-no-hash": "off",
-        "jsx-a11y/anchor-is-valid": ["warn", {
-            "aspects": ["invalidHref"]
-        }]
-    }
+	"extends": "airbnb",
+	"plugins": ["react"],
+	"env": {
+		"browser": true,
+		"node": true,
+		"es6": true,
+		"mocha": true
+	},
+	"globals": {
+		"React": true,
+		"ReactDOM": true,
+		"firebase": true
+	},
+	"rules": {
+		"semi": ["error", "never"],
+		"quotes": ["error", "single"],
+		"indent": ["error", 4],
+		"comma-dangle": ["error", "never"],
+		"object-curly-spacing": ["error", "always"],
+		"react/react-in-jsx-scope": 0,
+		"jsx-a11y/href-no-hash": "off",
+		"jsx-a11y/anchor-is-valid": [
+			"warn",
+			{
+				"aspects": ["invalidHref"]
+			}
+		]
+	}
 }
