--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,10 @@
 {
+	/*
+	0 - off
+	1 - warn
+	2 - error
+ 	*/
+
 	"extends": "airbnb",
 	"plugins": ["react"],
 	"env": {
@@ -10,21 +16,25 @@
 	"globals": {
 		"React": true,
 		"ReactDOM": true,
+		"PropTypes": true,
+		"state": true,
 		"firebase": true
 	},
 	"rules": {
-		"semi": ["error", "never"],
-		"quotes": ["error", "single"],
-		"indent": ["error", 4],
-		"comma-dangle": ["error", "never"],
-		"object-curly-spacing": ["error", "always"],
-		"react/react-in-jsx-scope": 0,
-		"jsx-a11y/href-no-hash": "off",
+		"semi": [2, "never"],
+		"quotes": [2, "single"],
+		"indent": [2, 4],
+		"no-tabs": [0],
+		"comma-dangle": [2, "never"],
+		"object-curly-spacing": [2, "always"],
+		"jsx-a11y/href-no-hash": 0,
 		"jsx-a11y/anchor-is-valid": [
 			"warn",
 			{
 				"aspects": ["invalidHref"]
 			}
-		]
+		],
+		"react/react-in-jsx-scope": 0,
+		"react/jsx-indent": [2, 4]
 	}
 }
