--- a/package.json
+++ b/package.json
@@ -1,61 +1,67 @@
 {
-	"name": "react-redux-webpack",
-	"version": "1.0.0",
-	"description": "React Redux Webpack",
-	"main": "index.js",
-	"scripts": {
-		"start": "webpack-dev-server",
-		"test": "./test-runner.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/itsmoops/react-redux-webpack.git"
-	},
-	"keywords": ["react", "redux", "webpack", "boilerplate"],
-	"author": "Eric Moore",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/itsmoops/react-redux-webpack/issues"
-	},
-	"homepage": "https://github.com/itsmoops/react-redux-webpack#readme",
-	"dependencies": {
-		"css-loader": "^0.28.1",
-		"file-loader": "^0.11.1",
-		"firebase": "^4.1.0",
-		"image-webpack-loader": "^3.3.1",
-		"isomorphic-fetch": "^2.2.1",
-		"less": "^2.7.2",
-		"less-loader": "^4.0.3",
-		"react": "^15.5.4",
-		"react-dom": "^15.5.4",
-		"react-redux": "^5.0.5",
-		"react-router-dom": "^4.1.1",
-		"redux": "^3.6.0",
-		"redux-immutable-state-invariant": "^2.0.0",
-		"redux-thunk": "^2.2.0",
-		"semantic-ui-css": "^2.2.10",
-		"semantic-ui-react": "^0.68.3",
-		"style-loader": "^0.18.1"
-	},
-	"devDependencies": {
-		"babel-core": "^6.24.1",
-		"babel-eslint": "^7.2.3",
-		"babel-loader": "^7.0.0",
-		"babel-plugin-add-module-exports": "^0.2.1",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-0": "^6.24.1",
-		"eslint": "^4.5.0",
-		"eslint-config-airbnb": "^15.1.0",
-		"eslint-config-standard": "^10.2.1",
-		"eslint-plugin-import": "^2.7.0",
-		"eslint-plugin-jsx-a11y": "^5.1.1",
-		"eslint-plugin-node": "^5.1.1",
-		"eslint-plugin-promise": "^3.5.0",
-		"eslint-plugin-react": "^7.3.0",
-		"eslint-plugin-standard": "^3.0.1",
-		"extract-text-webpack-plugin": "^2.1.0",
-		"webpack": "^3.5.5",
-		"webpack-dev-server": "^2.7.1"
-	}
+  "name": "react-redux-webpack",
+  "version": "1.0.0",
+  "description": "React Redux Webpack",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server",
+    "test": "./test-runner.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/itsmoops/react-redux-webpack.git"
+  },
+  "keywords": [
+    "react",
+    "redux",
+    "webpack",
+    "boilerplate"
+  ],
+  "author": "Eric Moore",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/itsmoops/react-redux-webpack/issues"
+  },
+  "homepage": "https://github.com/itsmoops/react-redux-webpack#readme",
+  "dependencies": {
+    "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
+    "firebase": "^4.1.0",
+    "image-webpack-loader": "^3.3.1",
+    "isomorphic-fetch": "^2.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.68.3",
+    "style-loader": "^0.18.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
+  }
 }
