--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
 			}
 		],
 		"react/react-in-jsx-scope": 0,
-		"react/jsx-indent": [2, 4]
+		"react/jsx-indent": [2, 4],
+		"react/prop-types": 0
 	}
 }
