--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "semantic-ui-css": "^2.2.10",
     "semantic-ui-react": "^0.68.3",
     "style-loader": "^0.18.1",
-    "webpack": "^3.5.5",
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
