--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "React Redux Webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -p && node ./server.js",
-    "dev": "webpack-dev-server",
+    "build": "webpack -p && node ./server.js",
+    "start": "webpack-dev-server",
     "test": "./test-runner.js"
   },
   "repository": {
