--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React Redux Webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -p",
+    "start": "webpack -p && node server.js",
+    "server": "node server.js",
     "dev": "webpack-dev-server",
     "test": "./test-runner.js"
   },
