--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "plugins": ["add-module-exports"]
+	"presets": ["env", "react", "stage-0"],
+	"plugins": ["add-module-exports"]
 }
