--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
 		"quotes": [2, "single"],
 		"indent": [2, 4],
 		"no-tabs": [0],
+		"no-debugger": [0],
 		"comma-dangle": [2, "never"],
 		"object-curly-spacing": [2, "always"],
 		"jsx-a11y/href-no-hash": 0,
