--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
 		"no-debugger": [0],
 		"comma-dangle": [2, "never"],
 		"object-curly-spacing": [2, "always"],
+		"import/no-named-as-default": 0,
+		"import/no-named-as-default-member": 0,
 		"jsx-a11y/href-no-hash": 0,
 		"jsx-a11y/anchor-is-valid": [
 			"warn",
