horizontal align icons

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,27 +18,39 @@
 		"ReactDOM": true,
 		"PropTypes": true,
 		"state": true,
-		"firebase": true
+		"firebase": true,
+		"Icon": true,
+		"horizontalCenter": true
 	},
 	"rules": {
 		"semi": [2, "never"],
 		"quotes": [2, "single"],
-		"indent": [2, 4],
+		"indent": [2, 4, { "SwitchCase": 1 }],
 		"no-tabs": [0],
 		"no-debugger": [0],
 		"comma-dangle": [2, "never"],
 		"object-curly-spacing": [2, "always"],
 		"import/no-named-as-default": 0,
 		"import/no-named-as-default-member": 0,
+		"no-unused-expressions": [
+			2,
+			{
+				"allowShortCircuit": true,
+				"allowTernary": true
+			}
+		],
 		"jsx-a11y/href-no-hash": 0,
 		"jsx-a11y/anchor-is-valid": [
-			"warn",
+			1,
 			{
 				"aspects": ["invalidHref"]
 			}
 		],
 		"react/react-in-jsx-scope": 0,
 		"react/jsx-indent": [2, 4],
-		"react/prop-types": 0
+		"react/jsx-indent-props": [2, 4],
+		"react/prop-types": 0,
+		"react/jsx-no-undef": 0,
+		"react/forbid-prop-types": 0
 	}
 }
