--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
 		"type": "git",
 		"url": "git+https://github.com/itsmoops/react-redux-webpack.git"
 	},
-	"keywords": ["react", "redux", "webpack", "boilerplate"],
+	"keywords": [
+		"react",
+		"redux",
+		"webpack",
+		"boilerplate"
+	],
 	"author": "Eric Moore",
 	"license": "ISC",
 	"bugs": {
@@ -41,6 +46,7 @@
 		"react-dom": "^15.5.4",
 		"react-icons-kit": "^1.0.7",
 		"react-redux": "^5.0.5",
+		"react-router": "^4.2.0",
 		"react-router-dom": "^4.1.1",
 		"redux": "^3.6.0",
 		"redux-immutable-state-invariant": "^2.0.0",
