--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
 		"react/jsx-indent-props": [2, 4],
 		"react/prop-types": 0,
 		"react/jsx-no-undef": 0,
-		"react/forbid-prop-types": 0
+		"react/forbid-prop-types": 0,
+		"react/jsx-closing-bracket-location": [2, "after-props"]
 	}
 }
