Revert "remove firebase - we doing this django thing"
This reverts commit 616b1f8362a9750f33ed42748e51d2cc6582d769.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,8 @@
 		"ReactDOM": true,
 		"PropTypes": true,
 		"state": true,
+		"firebase": true,
+		"Icon": true,
 		"horizontalCenter": true
 	},
 	"rules": {
