--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
 	"presets": ["env", "react", "stage-0"],
-	"plugins": ["add-module-exports"]
+	"plugins": [
+		"add-module-exports",
+		"transform-runtime",
+		"syntax-async-functions"
+	]
 }
