--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"babel-eslint": "^7.2.3",
 		"babel-loader": "^7.0.0",
 		"babel-plugin-add-module-exports": "^0.2.1",
+		"babel-plugin-syntax-async-functions": "^6.13.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-preset-env": "^1.6.0",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
