--- a/package.json
+++ b/package.json
@@ -13,12 +13,7 @@
 		"type": "git",
 		"url": "git+https://github.com/itsmoops/react-redux-webpack.git"
 	},
-	"keywords": [
-		"react",
-		"redux",
-		"webpack",
-		"boilerplate"
-	],
+	"keywords": ["react", "redux", "webpack", "boilerplate"],
 	"author": "Eric Moore",
 	"license": "ISC",
 	"bugs": {
@@ -42,7 +37,6 @@
 		"file-loader": "^0.11.1",
 		"firebase": "^4.6.0",
 		"image-webpack-loader": "^3.3.1",
-		"isomorphic-fetch": "^2.2.1",
 		"less": "^2.7.2",
 		"less-loader": "^4.0.3",
 		"prop-types": "^15.5.10",
@@ -57,6 +51,7 @@
 		"redux-immutable-state-invariant": "^2.0.0",
 		"redux-thunk": "^2.2.0",
 		"style-loader": "^0.18.1",
+		"styled-components": "^2.2.3",
 		"uglifyjs-webpack-plugin": "^1.0.1",
 		"webpack": "^3.5.5"
 	},
@@ -70,6 +65,7 @@
 		"eslint-plugin-promise": "^3.5.0",
 		"eslint-plugin-react": "^7.3.0",
 		"eslint-plugin-standard": "^3.0.1",
+		"eslint-plugin-styled-components-config": "0.0.2",
 		"webpack-dev-server": "^2.7.1"
 	}
 }
