start adding spread operator

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
 	"presets": ["env", "react", "stage-0"],
-	"plugins": ["add-module-exports", "transform-runtime", "syntax-async-functions"]
+	"plugins": [
+		"add-module-exports",
+		"transform-runtime",
+		"syntax-async-functions",
+		"transform-object-rest-spread"
+	]
 }
