--- a/package.json
+++ b/package.json
@@ -4,21 +4,15 @@
 	"description": "React Redux Webpack",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack --config=webpack.prod.config && node server.js",
-		"stage": "webpack --config=webpack.stage.config && node server.js",
-		"dev": "webpack-dev-server",
-		"test": "./test-runner.js"
+		"build": "webpack --config=webpack.prod.config",
+		"stage": "webpack --config=webpack.stage.config",
+		"start": "webpack-dev-server"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/itsmoops/react-redux-webpack.git"
 	},
-	"keywords": [
-		"react",
-		"redux",
-		"webpack",
-		"boilerplate"
-	],
+	"keywords": ["react", "redux", "webpack", "boilerplate"],
 	"author": "Eric Moore",
 	"license": "ISC",
 	"bugs": {
