--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 node_modules
 npm-debug.log
 dist
+.firebaserc
+database.rules.json
+firebase.json
+firestore.indexes.json
+firestore.rules
+storage.rules
