update docs and check in a busted module

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "React Redux Firebase",
 	"main": "index.js",
 	"scripts": {
-		"postinstall": "firebase login && firebase init",
+		"firebase-init": "firebase login && firebase init",
 		"start": "webpack-dev-server",
 		"build-dev": "webpack --config=webpack.config",
 		"build-staging": "webpack --config=webpack.staging.config",
@@ -34,6 +34,7 @@
 		"react-icons-kit": "^1.0.7",
 		"react-onclickoutside": "^6.6.2",
 		"react-redux": "^5.0.5",
+		"react-responsive-type": "0.0.2",
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.1.1",
 		"redux": "^3.6.0",
@@ -57,10 +58,6 @@
 		"babel-preset-stage-0": "^6.24.1",
 		"copy-webpack-plugin": "^4.2.0",
 		"css-loader": "^0.28.1",
-		"extract-text-webpack-plugin": "^2.1.0",
-		"file-loader": "^0.11.1",
-		"firebase-tools": "^3.14.0",
-		"image-webpack-loader": "^3.3.1",
 		"eslint": "^4.5.0",
 		"eslint-config-airbnb": "^15.1.0",
 		"eslint-config-standard": "^10.2.1",
@@ -71,6 +68,10 @@
 		"eslint-plugin-react": "^7.3.0",
 		"eslint-plugin-standard": "^3.0.1",
 		"eslint-plugin-styled-components-config": "0.0.2",
+		"extract-text-webpack-plugin": "^2.1.0",
+		"file-loader": "^0.11.1",
+		"firebase-tools": "^3.14.0",
+		"image-webpack-loader": "^3.3.1",
 		"less-loader": "^4.0.3",
 		"style-loader": "^0.18.1",
 		"webpack-dev-server": "^2.7.1"
