--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"redux-thunk": "^2.2.0",
 		"style-loader": "^0.18.1",
 		"styled-components": "^2.2.3",
+		"styled-components-theme": "^1.0.5",
 		"uglifyjs-webpack-plugin": "^1.0.1",
 		"webpack": "^3.5.5"
 	},
