--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
 		"object-curly-spacing": [2, "always"],
 		"import/no-named-as-default": 0,
 		"import/no-named-as-default-member": 0,
+		"space-infix-ops": 0,
 		"no-unused-expressions": [
 			2,
 			{
