--- a/package.json
+++ b/package.json
@@ -18,13 +18,7 @@
 		"type": "git",
 		"url": "git+https://github.com/itsmoops/react-redux-firebase.git"
 	},
-	"keywords": [
-		"react",
-		"redux",
-		"firebase",
-		"webpack",
-		"boilerplate"
-	],
+	"keywords": ["react", "redux", "rebass", "firebase", "webpack", "boilerplate"],
 	"author": "Eric Moore",
 	"license": "ISC",
 	"bugs": {
@@ -33,7 +27,6 @@
 	"homepage": "https://github.com/itsmoops/react-redux-firebase#readme",
 	"dependencies": {
 		"firebase": "^4.6.0",
-		"grid-styled": "^2.0.0-11",
 		"less": "^2.7.2",
 		"prop-types": "^15.5.10",
 		"react": "^15.5.4",
@@ -44,6 +37,7 @@
 		"react-redux": "^5.0.5",
 		"react-router": "^4.2.0",
 		"react-router-dom": "^4.1.1",
+		"rebass": "^1.0.4",
 		"redux": "^3.6.0",
 		"redux-immutable-state-invariant": "^2.0.0",
 		"redux-thunk": "^2.2.0",
